Separated main file with multiple submodules

--- a/client/css/styles.less
+++ b/client/css/styles.less
@@ -279,6 +279,19 @@ a {
     }
 }
 
+.btn-day-vote {
+    background-color: #00B50E;
+    color: #fff;
+    border: 1px solid #fff;
+    cursor: pointer;
+
+    &:disabled {
+        background-color: #99CC99;
+        color: #eee;
+        cursor: default;
+    }
+}
+
 .btn-remove-player {
     float: right;
     position: relative;
