Added character pictures

--- a/client/css/styles.less
+++ b/client/css/styles.less
@@ -105,6 +105,13 @@ a {
     background: url("img/spinner.gif");
 }
 
+.witch {
+    display: inline-block;
+    height: 32px;
+    width: 32px;
+    background: url("img/witch.png");
+}
+
 .language-list {
     font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
     display: none;
