--- a/client/css/styles.less
+++ b/client/css/styles.less
@@ -252,6 +252,53 @@ a {
     background-color: #f9f9f9;
 }
 
+#choose-roles-form {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+#choose-roles-list {
+  column-count: 2;
+  column-gap: 4px;
+  margin-bottom: 15px;
+}
+
+#choose-roles-list div {
+  display: inline-block;
+  width: 100%;
+  text-align: left;
+  box-sizing: border-box;
+  list-style-type: none;
+  background-color: #ccc;
+  margin: 0 0 4px 0;
+  cursor: pointer;
+  border-radius: 7px;
+}
+
+#choose-roles-list div:hover {
+  background-color: gold;
+}
+
+#choose-roles-list .selected-role {
+  background-color: lightgreen;
+}
+
+#choose-roles-list .selected-role:hover {
+  background-color: lightgreen;
+}
+
+.role-checkbox {
+  width: 100%;
+  margin-left: -10px;
+  padding: 5px 10px;
+  border-radius: 7px;
+}
+
+input[type="checkbox"] {
+  visibility: hidden;
+}
+
+
 .btn-werewolf-turn {
   &:disabled {
     background-color: #BEC4C0;
